# merge-xlsx

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Vagrantfile  conanfile.txt  format-all.sh
src/: CMakeLists.txt  merge-xlsx.cpp
src/app/: App.h  CMakeLists.txt
src/xlsx/: CMakeLists.txt  merge-xlsx.cpp
vagrant.d/: config.yml  install_packages.sh
